Fix responsiveness on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,18 +33,20 @@ a:hover {
 @media only screen and (max-width:700px) {
     #container {
         height:100vh;
-        padding-top:50px;
+        padding-top:0;
     }
 }
 
 #intro {
-    width:40%;
+    /* width:40%; */
     color:white;
     text-align:center;
+    padding-top:50px;
 }
 
 #navtype {
     color:white;
+    text-align: center;
 }
 
 .card {
@@ -95,6 +97,7 @@ a:hover {
 
 #footer {
     text-align:center;
+    padding-bottom:10px;
 }
 
 #notice {
@@ -140,6 +143,7 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
+    /* width:50vw; */
     flex-direction: column;
 }
